<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="name">Name</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
</resources>